Update TalkBack and utility libraries to JellyBean version.
git-svn-id: http://eyes-free.googlecode.com/svn@779 584082c0-ab3a-11dd-9ddb-6f86aeb5eef6